--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+RENAME THE "git" FOLDER TO ".git" AFTER CLONING!!!
+
 slstatus - suckless status
 ==========================
 slstatus is a suckless status monitor for window managers that use WM_NAME
